<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subjects"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="384dp"
        android:text="Subject Name :"
        android:textAlignment="textStart"
        android:textColor="#0C0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="448dp"
        android:text="@string/txt"
        android:textAlignment="textStart"
        android:textColor="#0C0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSubject"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Enter Subjects"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:text="@string/btn1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:text="@string/btn3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.599" />

    <Button
        android:id="@+id/btn"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:onClick="addData"
        android:text="@string/btn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:onClick="addData"
        android:text="@string/btn2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:onClick="getcount"
        android:text="@string/btn4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSubject"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/button"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:background="@drawable/oval"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSubject"
        app:layout_constraintVertical_bias="0.946" />

    <EditText
        android:id="@+id/e1"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter Id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>